add transaction categories operations;
